themes/next/assets/scss/components/forms.scss
//main: ../style.scss

.form-field,
.form-select select {
    -moz-appearance: none;
    -webkit-appearance: none;
    appearance: none;
    outline: none;
    display: block;
    width: 100%;
    background: #fff;
    border: 1px solid var(--border);
    padding: 12px 16px;
    font-size: 16px;
    line-height: 21px;
    font-weight: 500;
    color: var(--text);
    border-radius: var(--border-radius);
    transition: border .3s ease, color .3s ease;
    &:hover {
        &:not(:focus) {
            &:not(:disabled) {
                border-color: var(--border-dark);
            }
        }
    }
    &:focus {
        outline: none;
        border-color: var(--primary);
    }
}

.form-field {
    &:-webkit-autofill {
        -webkit-box-shadow: 0 0 0 30px white inset !important;
        -webkit-text-fill-color: var(--text) !important;
    }
    &::placeholder {
        color: var(--text-light);
    }
    &.sm {
        padding: 6px 12px;
        font-size: 14px;
    }
}

.form-select {
    position: relative;
    select {
        padding: 12px 34px 12px 16px;
        &.empty {
            color: var(--text-light);
        }
        &:disabled {
            cursor: not-allowed;
            pointer-events: none;
            border-color: var(--line);
            color: var(--text-light);
        }
    }
    select::-ms-expand {
        display: none;
    }
    &:before {
        --scale: 1;
        content: '';
        display: block;
        position: absolute;
        width: 8px;
        height: 8px;
        border-style: solid;
        border-width: 2px 2px 0 0;
        border-color: var(--border);
        right: 12px;
        top: 50%;
        pointer-events: none;
        transform: rotate(135deg) translateY(90%) scale(var(--scale));
        transition: border-color .3s ease;
    }
    &:hover {
        &:before {
            border-color: var(--border-dark);
        }
    }
    &.sm {
        select {
            padding: 6px 28px 6px 12px;
            font-size: 14px;
        }
        &:before {
            --scale: .7;
            right: 6px;
        }
    }
}

.form-element {
    margin-bottom: 20px;
    @include max(xxs) {
        margin-bottom: 16px;
    }
    & > label {
        margin: 0 0 4px 0;
        @include label;
    }
    .buttons {
        margin-top: 12px;
        display: flex;
        @include max(xs) {
            margin-top: 8px;
        }
        .btn {
            &:not(:last-child) {
                margin-right: 8px;
            }
        }
    }
}

.form {
    section {
        h4 {
            margin-top: 0;
            margin-bottom: 20px;
            @include max(xxs) {
                margin-bottom: 16px;
            }
        }
        &.two-columns {
            @include min(lg) {
                display: grid;
                grid-gap: 20px 8%;
                align-items: start;
                grid-template-columns: repeat(2, minmax(0, 1fr));
                grid-auto-flow: dense;
                .form-element {
                    &.full-width {
                        grid-column: 1 / 3;
                    }
                }
                h4 {
                    grid-column: 1 / 3;
                }
            }
        }
    }
    .form-element {
        &:last-child {
            margin-bottom: 0;
        }
    }
    .action {
        display: flex;
        .btn {
            &:not(:last-child) {
                margin-right: 16px;
                @include max(xs) {
                    margin-right: 12px;
                }
            }
        }
    }
    .logo-delete {
        img {
            display: block;
            max-width: 120px;
            max-height: 48px;
            margin-bottom: 12px;
        }
    }
    &.horizontal {
        .form-element {
            @include min(sm) {
                display: grid;
                align-items: start;
                grid-template-columns: 36% minmax(0, 1fr);
                min-height: 47px;
                & > label {
                    margin-top: 12px;
                    margin-bottom: 0;
                    line-height: 23px;
                    font-size: 16px;
                }
                .action {
                    grid-column: 2;
                    margin-left: auto;
                    flex-direction: row-reverse;
                    .btn {
                        &:not(:last-child) {
                            margin-left: 20px;
                            margin-right: 0;
                        }
                    }
                }
                .buttons {
                    grid-column: 2;
                }
            }
            label {
                &.checkbox:first-child,
                &.checkbox.inline,
                &.radio:first-child,
                &.radio.inline,
                &.switch:first-child,
                &.switch.inline {
                    margin-top: 12px;
                }
            }
        }
        .logo-delete {
            img {
                @include min(sm) {
                    margin-bottom: 0;
                }
            }
        }
    }
}

label {
    &.checkbox,
    &.radio,
    &.switch {
        margin: 0 0 12px 0;
        display: table;
        &.inline {
            margin: 0 12px 0 0;
            display: inline-block;
        }
        input {
            display: none;
            & + span {
                color: var(--text);
                height: 23px;
                line-height: 23px;
                font-size: 16px;
                position: relative;
                display: block;
                &:before,
                &:after {
                    content: '';
                    display: block;
                    left: 0;
                    top: 0;
                    position: absolute;
                }
                &:before {
                    height: 23px;
                    border: 1px solid var(--border);
                    background: #fff;
                    transition: background .3s ease, border-color .3s ease;
                }
                &:after {
                    transition: transform .3s ease, opacity .2s ease;
                }
            }
            &:checked + span {
                &:before {
                    background: var(--primary);
                    border-color: var(--primary);
                }
                &:after {
                    transition: opacity .3s ease, transform .6s cubic-bezier(.175, .88, .32, 1.2);
                }
            }
        }
        &:hover {
            input {
                &:not(:checked) + span {
                    &:before {
                        border-color: var(--border-dark);
                    }
                }
            }
        }
    }
    &.checkbox,
    &.radio {
        input {
            & + span {
                padding-left: 23px;
                &:not(:empty) {
                    padding-left: 31px;
                }
                &:before {
                    width: 23px;
                }
                &:after {
                    opacity: 0;
                }
            }
            &:checked + span {
                &:after {
                    opacity: 1;
                }
            }
        }
    }
    &.checkbox {
        input {
            & + span {
                &:before {
                    border-radius: 6px;
                }
                &:after {
                    width: 6px;
                    height: 10px;
                    border: 2px solid #fff;
                    border-top: 0;
                    border-left: 0;
                    left: 9px;
                    top: 5px;
                    transform: rotate(20deg);
                }
            }
            &:checked + span {
                &:after {
                    transform: rotate(43deg);
                }
            }
            &:indeterminate + span {
                &:before {
                    background: var(--primary);
                    border-color: var(--primary);
                }
                &:after {
                    width: 11px;
                    left: 5px;
                    height: 3px;
                    border-radius: 2px;
                    top: 9px;
                    background: #fff;
                    border: 0;
                    opacity: 1;
                    transform: rotate(0deg) scaleY(.7);
                }
                &:hover {
                    &:before {
                        border-color: var(--primary);
                    }
                }
            }
        }
    }
    &.radio {
        input {
            & + span {
                &:before,
                &:after {
                    border-radius: 50%;
                }
                &:after {
                    width: 23px;
                    height: 23px;
                    background: #fff;
                    opacity: 0;
                    transform: scale(.6);
                }
            }
            &:checked + span {
                &:after {
                    background: #fff;
                    transform: scale(.4);
                }
            }
        }
    }
    &.switch {
        input {
            & + span {
                padding-left: 41px;
                &:not(:empty) {
                    padding-left: 49px;
                }
                &:before {
                    width: 40px;
                    border-radius: 11px;
                }
                &:after {
                    left: 3px;
                    top: 3px;
                    border-radius: 50%;
                    width: 17px;
                    height: 17px;
                    background: var(--border);
                }
            }
            &:checked + span {
                &:after {
                    background: #fff;
                    transform: translateX(17px) scale(.86);
                }
            }
        }
    }
}

